# lecture-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: evaluate_qa.py  start.sh  stop.sh
src/lecture_search/: __init__.py  config.py  utils.py
src/lecture_search/api/: app.py  dependencies.py  schemas.py
src/lecture_search/api/routes/: qa.py  search.py  system.py  videos.py
src/lecture_search/ingestion/: audio.py  chunker.py  pipeline.py  transcriber.py
src/lecture_search/rag/: dspy_program.py  engine.py  metric.py  signatures.py
src/lecture_search/retrieval/: search.py  vector_store.py
src/lecture_search/storage/: database.py  models.py
ui/web/: colors_and_type.css  index.html
ui/web/components/: App.jsx  AskTab.jsx  CommandPalette.jsx  PipelineRow.jsx  ResultCard.jsx  SearchTab.jsx  Sidebar.jsx  StatsTab.jsx  SummarizeTab.jsx  UploadTab.jsx  VideosTab.jsx  api.js  primitives.jsx
