[project]
name = "lecture-search"
version = "0.2.0"
description = "AI-powered semantic search and Q&A over lecture videos using LangChain + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lecture Search contributors" }]
keywords = ["langchain", "langgraph", "rag", "whisper", "semantic-search", "lecture"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web / API
    "fastapi>=0.109,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5,<3.0",

    # ML / AI
    # NOTE: transformers + tokenizers + torch versions are co-pinned. DSPy
    # transitively wants tokenizers >= 0.20, but transformers 4.40 (which
    # matches torch 2.1) requires tokenizers < 0.20. Bumping any one of
    # these requires bumping all three together — verify with a smoke test.
    "torch>=2.1,<3.0",
    "openai-whisper==20231117",
    "sentence-transformers>=2.3,<3.0",
    "transformers>=4.40,<4.45",
    "tokenizers>=0.19,<0.20",

    # LangChain stack
    "langchain>=0.2.16,<0.4",
    "langchain-community>=0.2.16,<0.4",
    "langchain-core>=0.2.39,<0.4",
    "langchain-chroma>=0.1.2,<0.3",
    "langchain-openai>=0.1.20,<0.3",
    "langgraph>=0.2.28,<0.4",

    # Prompt optimization
    "dspy>=2.5,<4.0",

    # Vector DB
    "chromadb>=0.4.22,<0.6",
    "numpy>=1.26,<3.0",

    # Storage
    "sqlalchemy>=2.0,<3.0",

    # HTTP client + dotenv loader
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "black>=24.1",
    "httpx>=0.27",
]

[project.scripts]
lecture-search-api = "lecture_search.api.app:run"

[project.urls]
Homepage = "https://github.com/your-org/lecture-search"
Issues = "https://github.com/your-org/lecture-search/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
